tests/ui/consts/const-eval/stable-metric/ctfe-fn-call.stderr
error: constant evaluation is taking a long time
  --> $DIR/ctfe-fn-call.rs:28:5
   |
LL |     foo();
   |     ^^^^^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/ctfe-fn-call.rs:32:1
   |
LL | const X: u32 = call_foo();
   | ^^^^^^^^^^^^
   = note: `#[deny(long_running_const_eval)]` on by default

error: aborting due to previous error

